--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user">User Name</string>
     <string name="add">Add New Farm\n</string>
+    <string name="farmid">FarmID\n</string>
 </resources>
